syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "kratos_client/api/chat/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.chat.v1";
option java_outer_classname = "chatProtoV1";

service Chat {
	// 获取聊天历史记录
	rpc GetChatHistory (GetChatHistoryRequest) returns (GetChatHistoryReply){
		option (google.api.http) = {
			get: "/v1/chat/history"
		};
	};
	
	// 保存聊天消息
	rpc SaveChatMessage (SaveChatMessageRequest) returns (SaveChatMessageReply){
		option (google.api.http) = {
			post: "/v1/chat/message"
			body: "*"
		};
	};
	
	// 获取用户的聊天房间列表
	rpc GetUserChatRooms (GetUserChatRoomsRequest) returns (GetUserChatRoomsReply){
		option (google.api.http) = {
			get: "/v1/chat/rooms"
		};
	};
}

message GetChatHistoryRequest {
	int32 user_id = 1;
	int32 target_id = 2;
	int32 page = 3;
	int32 page_size = 4;
}

message GetChatHistoryReply {
	int64 code = 1;
	string message = 2;
	repeated ChatMessageInfo messages = 3;
	int32 total = 4;
}

message SaveChatMessageRequest {
	int32 from_id = 1;
	int32 to_id = 2;
	string content = 3;
	string message_type = 4;
	string room_id = 5;
}

message SaveChatMessageReply {
	int64 code = 1;
	string message = 2;
}

message GetUserChatRoomsRequest {
	int32 user_id = 1;
}

message GetUserChatRoomsReply {
	int64 code = 1;
	string message = 2;
	repeated ChatRoomInfo rooms = 3;
}

message ChatMessageInfo {
	int64 id = 1;
	int32 from_id = 2;
	int32 to_id = 3;
	string from_name = 4;
	string to_name = 5;
	string content = 6;
	string message_type = 7;
	string room_id = 8;
	string created_at = 9;
}

message ChatRoomInfo {
	string room_id = 1;
	int32 target_id = 2;
	string target_name = 3;
	string target_role = 4;
	string last_message = 5;
	string last_message_time = 6;
	int32 unread_count = 7;
}